[package]
name = "ast"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rowan = "0.15.8"
syntax = { path = "../syntax" }
parser = { path = "../parser" }
mz-sql-parser = { git = "https://github.com/MaterializeInc/materialize.git", branch = "main", default-features = false }
