[package]
name = "lexer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
mz-ore = { git = "https://github.com/MaterializeInc/materialize.git", branch = "main", default-features = false }
mz-sql-lexer = { git = "https://github.com/MaterializeInc/materialize.git", branch = "main", default-features = false }
